<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x"
        android:layout_marginTop="@dimen/sxxx"
        android:layout_marginEnd="@dimen/x"
        android:hint="@string/number"
        android:textSize="@dimen/text_size_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x"
        android:layout_marginTop="@dimen/xxm"
        android:layout_marginEnd="@dimen/x"
        android:hint="@string/name"
        android:textSize="@dimen/text_size_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSurName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x"
        android:layout_marginTop="@dimen/xxm"
        android:layout_marginEnd="@dimen/x"
        android:hint="@string/surname"
        android:textSize="@dimen/text_size_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/lxxm"
        android:background="@drawable/shape_button"
        android:enabled="false"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSurName" />
</androidx.constraintlayout.widget.ConstraintLayout>